fixed issue on iphone where styles werent being carried over.  fixed another issue where the icon trash icon button wasnt registering in safari

--- a/file-uploader/components/upload-modal/scss/modal.scss
+++ b/file-uploader/components/upload-modal/scss/modal.scss
@@ -106,7 +106,7 @@
 
   }
 @media (min-width: 1px) and (max-width: 639px) {
-  ..pe-modal-container.pe-modal-container__minimized {
+  .pe-modal-container.pe-modal-container__minimized {
     width: 100%;
   }
 }
@@ -238,6 +238,16 @@ h2 {
 .pe-modal-container .actions button:first-child {
   order: 1;
   margin-left: 1em;
+  &:disabled {
+    &:hover {
+        cursor: default !important;
+        border: #e9e9e9 !important;
+        color: #c7c7c7 !important;
+        background-color: #e9e9e9 !important;
+        box-shadow: none !important;
+        text-decoration: none !important;
+    }
+  }
 }
 @media (min-width: 1px) and (max-width: 480px) {
   /* line 137, ./scss/style.scss */
