--- a/file-uploader/scss/_file-uploader.scss
+++ b/file-uploader/scss/_file-uploader.scss
@@ -1,3 +1,7 @@
+button > * {
+  pointer-events: none;
+}
+
 
   .pe-modal-container {
     width:475px;
@@ -6,6 +10,20 @@
         width: 100%;
         text-align: center;
         padding: 20px 0;
+      }
+      .actions {
+        button {
+          &:disabled {
+            &:hover {
+              cursor: default !important;
+              border: #e9e9e9 !important;
+              color: #c7c7c7 !important;
+              background-color: #e9e9e9 !important;
+              box-shadow: none !important;
+              text-decoration: none !important;
+            }
+          }
+        }
       }
     }
 
