--- a/file-uploader/scss/style.scss
+++ b/file-uploader/scss/style.scss
@@ -1,2 +1,4 @@
-@import "./elements";
-@import "./file-uploader";
+.deep-encapsulation {
+  @import "./elements";
+  @import "./file-uploader";
+}
